@@ -23,9 +23,21 @@ import java.net.HttpURLConnection;
 import java.net.URI;
 import java.net.URL;
 import java.net.URLEncoder;
+import java.net.http.HttpClient;
+import java.net.http.HttpClient.Redirect;
+import java.net.http.HttpClient.Version;
+import java.net.http.HttpRequest;
+import java.net.http.HttpRequest.BodyPublisher;
+import java.net.http.HttpRequest.BodyPublishers;
+import java.net.http.HttpRequest.Builder;
+import java.net.http.HttpResponse;
+import java.net.http.HttpResponse.BodyHandlers;
+import java.nio.ByteBuffer;
+import java.time.Duration;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.concurrent.Flow.Subscriber;
 import java.util.zip.GZIPInputStream;
 
 public class Call<T> implements Serializable {
@@ -42,9 +54,11 @@ public class Call<T> implements Serializable {
     private transient Map<String, List<String>> responseHeaders = new IgnoreCaseMap<>();
     private transient  ByteArrayInputStream responseStream = null;
     private transient ByteArrayInputStream errorStream = null;
-
+    private transient int status = -1;
+    public int getStatus(){
+        return status;
+    }
     T input;
-
     private void checkExpired(){
         if (responseStream != null){
             throw new RuntimeException("Call already used once. Create another instance of Call Object");
@@ -110,37 +124,22 @@ public class Call<T> implements Serializable {
 
     }
 
-    int timeOut = 60000;
-    public Call<T> timeOut(int timeOut){
+    long timeOut = 60000L;
+    public Call<T> timeOut(long timeOut){
         checkExpired();
         this.timeOut = timeOut;
         return this;
     }
 
-    private boolean beingRedirected = false;
-    public boolean isBeingRedirected(){
-        if (responseStream == null){
-            invoke();
-        }
-        return beingRedirected;
-    }
-    private String redirectedUrl = null;
-    public String getRedirectedUrl(){
-        if (responseStream == null){
-            invoke();
-        }
-        return redirectedUrl;
-    }
 
-    private Call<T> invoke(){
+    private Call<T> invoke() {
         checkExpired();
         if (method == HttpMethod.GET && inputFormat != InputFormat.FORM_FIELDS) {
             method = HttpMethod.POST;
             //throw new RuntimeException("Cannot call API using Method " + method + " and parameter as " + inputFormat );
         }
 
-        URL curl;
-        HttpURLConnection connection = null;
+        Builder curlBuilder ;
         StringBuilder fakeCurlRequest = new StringBuilder();
         try {
             StringBuilder sUrl = new StringBuilder();
@@ -161,27 +160,31 @@ public class Call<T> implements Serializable {
             }
             fakeCurlRequest.append("Request ").append(":\n curl ");
 
-            curl = new URL(sUrl.toString());
-            connection = (HttpURLConnection)(curl.openConnection());
+            curlBuilder = HttpRequest.newBuilder().uri(new URI(sUrl.toString()));
+            curlBuilder.timeout(Duration.ofMillis(timeOut));
+            byte[] parameterByteArray = inputFormat == InputFormat.INPUT_STREAM ? getParameterRaw(input) : parameterString.getBytes();
+            if (method ==  HttpMethod.GET){
+                curlBuilder.GET();
+            }else {
+                curlBuilder.POST(BodyPublishers.ofByteArray(parameterByteArray));
+            }
+            curlBuilder.setHeader("Accept-Encoding", "gzip");
+            curlBuilder.version(Version.HTTP_2);
 
-            connection.setConnectTimeout(timeOut);
-            connection.setReadTimeout(timeOut);
-            connection.setRequestMethod(method.toString());
-
-            connection.setRequestProperty("Accept-Encoding", "gzip");
             for (String k : requestHeaders.keySet()) {
                 String v = requestHeaders.get(k);
-                connection.setRequestProperty(k, v);
-                fakeCurlRequest.append(" -H '").append(k).append(": ").append(v).append("' ");
-            };
+                curlBuilder.setHeader(k, v);
+                if (Config.instance().isDevelopmentEnvironment()) {
+                    fakeCurlRequest.append(" -H '").append(k).append(": ").append(v).append("' ");
+                }else {
+                    fakeCurlRequest.append(" -H '").append(k).append(": ").append("****").append("' ");
+                }
+            }
 
-            connection.setDoOutput(true);
-            connection.setDoInput(true);
 
             fakeCurlRequest.append("'").append(sUrl).append("'");
             fakeCurlRequest.append(" ");
             if (method != HttpMethod.GET) {
-                byte[] parameterByteArray = inputFormat == InputFormat.INPUT_STREAM ? getParameterRaw(input) : parameterString.getBytes();
                 if (inputFormat == InputFormat.INPUT_STREAM){
                     String contentType = requestHeaders.get("content-type");
                     MimeType mimeType = null;
@@ -196,29 +199,22 @@ public class Call<T> implements Serializable {
                 }else {
                     fakeCurlRequest.append("-d '").append(parameterString).append("'");
                 }
-                connection.getOutputStream().write(parameterByteArray);
             }
+            HttpRequest request  = curlBuilder.build();
+            HttpResponse<InputStream> response = HttpClient.newBuilder().followRedirects(Redirect.ALWAYS).build().send(request, BodyHandlers.ofInputStream());
 
-            if (connection.getResponseCode() >= 200 && connection.getResponseCode() < 299 ) {
+            this.status = response.statusCode();
+
+            if (response.statusCode() >= 200 && response.statusCode() < 299 ) {
                 //2xx is success.!!
-                InputStream in = null;
-                if (isResponseDecompressed() && connection.getContentEncoding()!=null && connection.getContentEncoding().equals("gzip")) {
-                    in = new GZIPInputStream(connection.getInputStream());
-                }else {
-                    in = connection.getInputStream();
-                }
-                responseHeaders.putAll(connection.getHeaderFields());
+                InputStream in = isResponseDecompressed() && response.headers().firstValue("Content-Encoding").isPresent() ? new GZIPInputStream(response.body()) : response.body();
+                responseHeaders.putAll(response.headers().map());
                 responseStream = new ByteArrayInputStream(StringUtil.readBytes(in));
                 errorStream= new ByteArrayInputStream(new byte[]{});
                 this.hasErrors = false;
-            }else if (connection.getResponseCode() == HttpURLConnection.HTTP_MOVED_TEMP || connection.getResponseCode() == HttpURLConnection.HTTP_MOVED_PERM ){
-                redirectedUrl = connection.getHeaderField("Location");
-                beingRedirected = true;
-                responseStream = new ByteArrayInputStream(new byte[]{});
-                errorStream = new ByteArrayInputStream(new byte[]{});
-                hasErrors = false;
             }else {
-                errorStream = new ByteArrayInputStream(StringUtil.readBytes(connection.getErrorStream()));
+                InputStream in = isResponseDecompressed() && response.headers().firstValue("Content-Encoding").isPresent() ? new GZIPInputStream(response.body()) : response.body();
+                errorStream = new ByteArrayInputStream(StringUtil.readBytes(in));
                 responseStream = new ByteArrayInputStream(new byte[] {});
                 this.hasErrors = true;
             }
@@ -240,12 +236,8 @@ public class Call<T> implements Serializable {
             }
             Config.instance().getLogger(getClass().getName()).info(fakeCurlRequest.toString());
             return this;
-        } catch (IOException e) {
+        } catch (Exception e) {
             throw new RuntimeException(e); //Soften the exception.
-        }finally {
-            if (connection != null) {
-                connection.disconnect();
-            }
         }
     }
 
